--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Real-time benchmarking for qubit selection\n",
-    "*Usage estimate: 4 minutes on an Eagle r2 processor (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: 4 minutes on ibm_cusco (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -30,7 +30,6 @@
    "metadata": {},
    "source": [
     "## Background\n",
-    "\n",
     "This tutorial shows how to run real-time characterization experiments and update backend properties to improve qubit selection when mapping a circuit to the physical qubits on a QPU. You will learn the basic characterization experiments that are used to determine properties of the QPU, how to do them in Qiskit, and how to update the properties saved in the backend object representing the QPU based on these experiments.\n",
     "\n",
     "The QPU-reported properties are updated once a day, but the system may drift faster than the time between updates. This can affect the reliability of the qubit selection routines in the `Layout` stage of the pass manager, as they'd be using reported properties that don't represent the present state of the QPU. For this reason, it may be worth devoting some QPU time to characterization experiments, which can then be used to update the QPU properties used by the `Layout` routine."
@@ -42,7 +41,6 @@
    "metadata": {},
    "source": [
     "## Requirements\n",
-    "\n",
     "Before starting this tutorial, be sure you have the following installed:\n",
     "\n",
     "- Qiskit SDK v1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
@@ -200,24 +198,20 @@
     "A series of experiments is used to characterize the main properties of the qubits in a QPU. These are $T_1$, $T_2$, readout error, and single-qubit and two-qubit gate error. We'll briefly summarize what these properties are and refer to experiments in the [`qiskit-experiments`](https://qiskit-community.github.io/qiskit-experiments/index.html) package that are used to characterize them.\n",
     "\n",
     "#### T1\n",
-    "\n",
     "$T_1$ is the characteristic time it takes for an excited qubit to fall to the ground state due to amplitude-damping decoherence processes. In a [$T_1$ experiment](https://qiskit-community.github.io/qiskit-experiments/manuals/characterization/t1.html), we measure an excited qubit after a delay. The larger the delay time is, the more\n",
     "likely is the qubit to fall to the ground state. The goal of the\n",
     "experiment is to characterize the decay rate of the qubit towards the\n",
     "ground state.\n",
     "\n",
     "#### T2\n",
-    "\n",
     "$T_2$ represents the amount of time required for a single qubit's Bloch\n",
     "vector projection on the XY plane to fall to approximately 37% ($\\frac{1}{e}$) of\n",
     "its initial amplitude due to dephasing decoherence processes. In a [$T_2$ Hahn Echo experiment](https://qiskit-community.github.io/qiskit-experiments/manuals/characterization/t2hahn.html), we can estimate the rate of this decay.\n",
     "\n",
     "#### State preparation and measurement (SPAM) error characterization\n",
-    "\n",
     "In a [SPAM-error characterization experiment](https://qiskit-community.github.io/qiskit-experiments/manuals/measurement/readout_mitigation.html) qubit are prepared in a certain state ($\\vert 0 \\rangle$ or $\\vert 1 \\rangle$) and measured. The probability of measuring a state different than the one prepared then gives the probability of the error.\n",
     "\n",
     "#### Single-qubit and two-qubit randomized benchmarking\n",
-    "\n",
     "[Randomized benchmarking](https://qiskit-community.github.io/qiskit-experiments/manuals/verification/randomized_benchmarking.html) is a popular protocol for characterizing the error rate of\n",
     "quantum processors. An RB experiment consists of the generation of random Clifford\n",
     "circuits on the given qubits such that the unitary computed by the circuits is the\n",
@@ -305,7 +299,6 @@
    "metadata": {},
    "source": [
     "### QPU properties over time\n",
-    "\n",
     "Looking at the reported QPU properties over time (we'll consider a single week below), we see how these can fluctuate on a scale of a single day. Small fluctuations can happen even within a day. In this scenario, the reported properties (updated once per day) will not accurately capture the current status of the QPU. Moreover, if a job is transpiled locally (using current reported properties) and submitted but executed only at a later time (minutes or days), it may run the risk of having used outdated properties for qubit selection in the transpilation step. This highlights the importance of having updated information about the QPU at execution time. First, let's retrieve the properties over a certain time range."
    ]
   },
@@ -450,7 +443,6 @@
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
-    "\n",
     "No optimization of the circuits or operators is done in this tutorial."
    ]
   },
@@ -467,8 +459,7 @@
    "id": "d88f925f-3ffd-43de-ac1f-2c5ba3b8cd96",
    "metadata": {},
    "source": [
-    "### Execute a quantum circuit with default qubit selection\n",
-    "\n",
+    "###  Execute a quantum circuit with default qubit selection\n",
     "As a reference result of performance, we'll execute a quantum circuit on a QPU by using the default qubits, which are the qubits selected with the requested backend properties. We will use `optimization_level = 3`.  This setting includes the most advanced transpilation optimization, and uses target properties (like operation errors) to select the best performing qubits for execution."
    ]
   },
@@ -643,7 +634,6 @@
     "## Step 4: Post-process and return result in desired classical format\n",
     "\n",
     "Finally, let's compare the fidelity of the Bell state obtained in the two different settings:\n",
-    "\n",
     "- `original`, that is with the default qubits chosen by the transpiler based on reported properties of the backend.\n",
     "- `updated`, that is with the qubits chosen based on updated properties of the backend after characterization experiments have run."
    ]
@@ -742,9 +732,9 @@
    "id": "cd81b208-b13b-4988-854e-1741408f36f3",
    "metadata": {},
    "source": [
-    "<Admonition type=\"note\" title=\"Call to action\">\n",
-    "Try to apply this method to your executions and determine how much of a benefit you get! You can also try and see how much improvements you get from different backends.\n",
-    "</Admonition>"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Call to Action:</b> Try to apply this method to your executions and determine how much of a benefit you get! You can also try and see how much improvements you get from different backends.\n",
+    "</div>"
    ]
   },
   {
