--- a/docs/guides/access-instances-platform-apis.mdx
+++ b/docs/guides/access-instances-platform-apis.mdx
@@ -26,7 +26,7 @@ In the body when provisioning an instance:
 - **instance_limit_seconds** (string or null, `^[0-9]+$`): The limit to set on the instance. For Open Plan: if omitted, this defaults to 10 minutes.
 .
 - **usage_allocation_seconds** (string or null, `^[0-9]+$`): Allotted time for the instance, used by the fair-share scheduler to determine the priority in the queue, based on usage of all QPUs.
-- **backends** (Array of list of backends (strings or null) or array with "ANY")): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends. `[]` means no backends.
+- **backends** (Array of list of backends (strings or null) or array with "ANY")): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends available on this plan. `[]` means no backends.
 
 ## `extensions`
 
