--- a/docs/guides/access-instances-platform-apis.mdx
+++ b/docs/guides/access-instances-platform-apis.mdx
@@ -5,17 +5,22 @@ description: Parameters to set when provisioning a Qiskit Runtime service instan
 ---
 {/* cspell:ignore ResourceController  */}
 
-## Use IBM Cloud Platform APIs to access instances
+# Use IBM Cloud Platform APIs to access instances
+
+
+This guide is for anyone using the IBM Cloud Platform APIs to provision or manage access to instances. It provides details on the [parameters](#parameters) you can set when provisioning an instance, as well as the set of [extension fields](#extensions) returned when you access an instance.
 
 <Admonition type="note">
 Refer to the IBM Cloud&reg; ResourceController API documentation for more information.
 
+Some relevant pages:
 - [Create (provision) a new resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#create-resource-instance)
 - [Update a resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#update-resource-instance)
+- [Get a resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#get-resource-instance)
+- [Get a list of all resource instances](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#list-resource-instances)  
+    - When getting a list of all resource instances, note that you can filter to only Qiskit Runtime instances with `resource_id = "b6049020-80f4-11eb-a0f7-e35ec9b4054f"`
 
 </Admonition>
-
-This guide is for anyone using the IBM Cloud Platform APIs to provision or manage access to instances. It provides details on the parameters you can set when provisioning an instance, as well as the set of extension fields returned when you access an instance.
 
 ## `parameters`
 
