--- a/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
@@ -541,7 +541,7 @@
     "0 & -i \\\\\n",
     "i & 0 \\\\\n",
     "\\end{pmatrix}\n",
-    "= -1|0\\rangle \\langle 1|+i|1\\rangle \\langle 0|\n",
+    "= -i|0\\rangle \\langle 1|+i|1\\rangle \\langle 0|\n",
     "$$\n",
     "\n",
     "$$\n",
