--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "47ba8097-c109-4f9f-80a4-44e14ce044a2",
    "metadata": {},
    "outputs": [
@@ -384,6 +384,10 @@
     "pubs = [(qc_isa, obs_isa)]\n",
     "job = estimator.run([[qc_isa, obs_isa]])\n",
     "res = job.result()\n",
+    "\n",
+    "# On a simulator:\n",
+    "#job = estimator_sim.run([[qc_isa, obs_isa]])\n",
+    "#res=job.result()\n",
     "\n",
     "print(res[0].data.evs)"
    ]
