--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -20,11 +20,23 @@
     "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
     "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
+    "- `numpy`\n",
+    "- `pylatexenc`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
     "\n",
     "This module was tested and used 8 minutes of QPU time. This is an estimate only. Your actual usage may vary. Two time-consuming calculations are marked as such in header comments and can be carried out on simulators if students are short on QPU time. With those removed, the module requires only ~30 seconds of QPU time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Uncomment and modify this line as needed to install dependencies\n",
+    "#!pip install 'qiskit>=2.1.0' 'qiskit-ibm-runtime>=0.40.1' 'qiskit-aer>=0.17.0' 'numpy' 'pylatexenc'"
    ]
   },
   {
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c26c8f6f-1ed7-4079-ba21-4747d318996f",
    "metadata": {},
    "outputs": [],
@@ -96,7 +108,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# Syntax for first saving your token\n",
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
     "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
     "\n",
     "# Load saved credentials\n",
@@ -140,17 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7265c432-19eb-41ba-940d-a80541fe0218",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import an estimator, this time from qiskit (we will import from Runtime for real hardware)\n",
-    "from qiskit.primitives import BackendSamplerV2\n",
-    "from qiskit.primitives import BackendEstimatorV2\n",
+    "from qiskit_aer.primitives import SamplerV2, EstimatorV2\n",
+    "from qiskit_aer.noise import NoiseModel\n",
     "\n",
-    "sampler_sim = BackendSamplerV2(backend=backend)\n",
-    "estimator_sim = BackendEstimatorV2(backend=backend)"
+    "# Generate the noise model from the backend properties\n",
+    "noise_model = NoiseModel.from_backend(backend)\n",
+    "\n",
+    "noisy_sampler = SamplerV2(\n",
+    "    options={\"backend_options\": {\"noise_model\": noise_model}}\n",
+    ")\n",
+    "noisy_estimator = EstimatorV2(\n",
+    "    options={\"backend_options\": {\"noise_model\": noise_model}}\n",
+    ")"
    ]
   },
   {
@@ -250,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8996bcf0-1848-4eda-b5a1-47190fede630",
    "metadata": {},
    "outputs": [],
@@ -267,8 +286,9 @@
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
     "\n",
-    "# job = sampler_sim.run([qc_isa])\n",
-    "# counts=job.result()[0].data.c.get_counts()"
+    "#job = noisy_sampler.run([qc_isa])\n",
+    "#res=job.result()\n",
+    "#counts=res[0].data.c.get_counts()"
    ]
   },
   {
@@ -425,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "782f01c9-f9c2-4e5e-8638-7c9ba3347bfb",
    "metadata": {},
    "outputs": [],
@@ -439,8 +459,9 @@
     "counts = res[0].data.c.get_counts()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = sampler_sim.run([qc])\n",
-    "# counts = job.result()[0].data.c.get_counts()"
+    "#job = noisy_sampler.run([qc_isa])\n",
+    "#res=job.result()\n",
+    "#counts=res[0].data.c.get_counts()"
    ]
   },
   {
@@ -603,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c1918196-a26e-4419-8a25-488a3d1d4cc1",
    "metadata": {},
    "outputs": [
@@ -643,8 +664,8 @@
     "res = job.result()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = estimator_sim.run([[qc_isa,obs_isa]])\n",
-    "# res=job.result()\n",
+    "#job = noisy_estimator.run([[qc_isa,obs_isa]])\n",
+    "#res=job.result()\n",
     "\n",
     "# Step 4: Return the result in classical form, and analyze.\n",
     "\n",
@@ -665,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ef107fd6-03c2-42f2-a51d-e52957cfb82e",
    "metadata": {},
    "outputs": [
@@ -710,13 +731,14 @@
     "batch.close()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = estimator_sim.run([[qc_isa,obs1_isa],[qc_isa,obs2_isa]])\n",
-    "# res=job.result()\n",
+    "\n",
+    "#job = noisy_estimator.run([[qc,obs1],[qc,obs2]])\n",
+    "#res=job.result()\n",
     "\n",
     "# Step 4: Return the result in classical form, and analyze.\n",
     "\n",
     "print(\"The expectation value of the first observable is: \", res[0].data.evs)\n",
-    "print(\"The expectation value of the first observable is: \", res[1].data.evs)"
+    "print(\"The expectation value of the second observable is: \", res[1].data.evs)"
    ]
   },
   {
@@ -997,8 +1019,9 @@
     "batch.close()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = estimator_sim.run([(qc_isa, [[obs1_isa], [obs2_isa], [obs3_isa]], [params])], precision=0.01)\n",
-    "# res=job.result()"
+    "\n",
+    "#job = noisy_estimator.run([(qc, [[obs1], [obs2], [obs3]], [params])])\n",
+    "#res=job.result()"
    ]
   },
   {
@@ -1114,8 +1137,9 @@
     "batch.close()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = estimator_sim.run([(qc_isa, [[obs1_isa], [obs2_isa], [obs3_isa]], [params])], precision=0.01)\n",
-    "# res=job.result()"
+    "\n",
+    "#job = noisy_estimator.run([(qc, [[obs1], [obs2], [obs3]], [params])])\n",
+    "#res=job.result()"
    ]
   },
   {
